<resources>
    <string name="app_name">Skylume</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_map_api_key">AIzaSyAZXOAdBGARD3-G3wNLWXOUKcmbR0FTZio</string>
    <string name="today">Today</string>
    <string name="next_4_days">Next 4 Days</string>
    <string name="theme">THEME</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">LANGUAGE</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
    <string name="wind">WIND</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="notification">NOTIFICATION</string>
    <string name="enable">Enable</string>
    <string name="location">LOCATION</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="skylume">Skylume</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="save">Save</string>
    <string name="favorite">Favorite</string>
    <string name="time">Time:</string>
    <string name="date">Date:</string>
    <string name="alarm">Set Alert</string>
    <string name="notificationSmall">Notification</string>
    <string name="ok">Ok</string>
    <string name="ok2">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="now">Now</string>
    <string name="no_connection">No Connection</string>
    <string name="data_provided_by_openweathermap">Data provided by OpenWeatherMap</string>
    <string name="last_updated">Last Updated:</string>
    <string name="require_location_permission">Require Location Permission</string>
    <string name="allow">Allow</string>
    <string name="are_you_sure_you_want_to_remove_the_item">Are you sure you want to remove the item?</string>
    <string name="delete">Delete</string>
    <string name="unknow">Unknown</string>
    <string name="K">K</string>
    <string name="C">C</string>
    <string name="F">F</string>
    <string name="skylume_alert">Skylume Alert</string>
</resources>