<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogRoot"
    android:layout_width="325dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_remove_the_item"
            android:textColor="@color/grayText"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/epmty_layout"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/delete"
            app:lottie_url="REPLACE_JSON_URL" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/epmty_layout"
            app:layout_constraintStart_toStartOf="@+id/epmty_layout"
            app:layout_constraintTop_toBottomOf="@+id/epmty_layout">

            <TextView
                android:id="@+id/btnOk"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="18dp"
                android:background="@drawable/btnshow_background"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/black" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>