<?xml version="1.0" encoding="utf-8"?>
<nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <nl.psdcompany.duonavigationdrawer.views.DuoMenuView
        android:tag="menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:textSize="30sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:text="@string/skylume"
                android:textColor="@color/white"/>


            <LinearLayout
                android:id="@+id/Home"
                android:gravity="center_vertical"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="24dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/home_fill"
                    app:tint="@color/white" />

                <TextView
                    android:textSize="18sp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Favorites"
                android:gravity="center_vertical"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/favorite_fill"

                    app:tint="@color/white" />

                <TextView
                    android:textSize="18sp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Alerts"
                android:gravity="center_vertical"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/notifications_fill"
                    app:tint="@color/white" />

                <TextView
                    android:textSize="18sp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alerts"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Settings"
                android:gravity="center_vertical"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="24dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/settings_fill"

                    app:tint="@color/white" />

                <TextView
                    android:textSize="18sp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </LinearLayout>



    </nl.psdcompany.duonavigationdrawer.views.DuoMenuView>

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="content"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph"
        tools:visibility="invisible" />


    <androidx.appcompat.widget.Toolbar

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ToolbarStyle"
        android:id="@+id/toolbar"/>





</nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout>